# Annex-b

./: .env.example  .gitignore  AI辦公室-航空地勤-開發實作規格書-v2.md  docker-compose.yml  justfile  pricing.toml  prompts-company_context-擴寫草稿v2.md  rust-toolchain.toml
.claude/: launch.json
assets/: CREDITS.md  README.md
assets/maps/: .gitkeep
assets/sprites/agents/: .gitkeep
assets/tilesets/: .gitkeep
assets/tilesets/limezu-modern-office/: manifest.example.json
db/migrations/: 001_init.sql
docs/: CLAUDE.md
docs/decisions/: ADR-001-multi-provider-gateway.md  ADR-002-player-config-and-editor-completion.md  ADR-003-real-assets-and-character-appearance.md
docs/domain/: ground_handling.md
docs/eval/: p0-review.md  p1-review.md
engine/: Cargo.toml  Dockerfile
engine/crates/agent-core/: Cargo.toml
engine/crates/agent-core/src/: lib.rs
engine/crates/api-server/: Cargo.toml
engine/crates/api-server/src/: agents_api.rs  db_persist.rs  error.rs  healthz.rs  lib.rs  main.rs  router.rs  sim.rs  state.rs  world_api.rs  ws.rs
engine/crates/api-server/tests/: agents_api.rs  healthz.rs  world_api.rs  ws.rs
engine/crates/llm-gateway/: Cargo.toml
engine/crates/llm-gateway/src/: budget.rs  json_guard.rs  lib.rs  pricing.rs  provider.rs  recorder.rs  tier.rs
engine/crates/llm-gateway/src/providers/: anthropic.rs  gemini.rs  mock.rs  mod.rs  ollama.rs  openai.rs
engine/crates/sim-core/: Cargo.toml
engine/crates/sim-core/src/: appearance.rs  clock.rs  commute.rs  db.rs  events.rs  fixture.rs  grid.rs  lib.rs  llm_profile.rs  pathfind.rs  persist.rs  tilemap.rs  world.rs
engine/crates/sim-core/tests/: commute_headless.rs  fixture_drift.rs  office_map.rs
engine/crates/sim-core/tests/fixtures/: world_fixture.json
prompts/: company_context_core.md  company_context_full.md  converse.md  daily_plan.md  decompose.md  importance.md  meeting.md  react.md  reflect_insights.md  reflect_questions.md  relationship.md  work_progress.md
scripts/: check_character_frames.mjs  check_ollama.sh  check_seed_counts.sh  ci.sh  gen_agent_sprites.mjs  gen_office_shell.mjs  gen_theme_tilesets.mjs  gen_touch_icon.mjs  gen_world_fixture.mjs  seed_world.sh  sync_character_pieces.mjs  sync_limezu_assets.mjs
scripts/lib/: png.mjs  seed_layout.mjs
web/: Dockerfile  package.json  pnpm-lock.yaml
web/public/maps/: office_shell.tmj
web/public/mock/: world_snapshot.json
web/public/tilesets/: themes.json
web/src/api/: client.ts
web/src/app/: layout.tsx  page.tsx
web/src/editor/: .gitkeep
web/src/game/: .gitkeep  OfficeCanvas.tsx  store.ts  types.ts
web/src/lib/: character_compositor.ts  character_frames.ts  office_shell_core.mjs
web/src/panels/: .gitkeep  AgentPanel.tsx  LayoutEditorPanel.tsx  TimeControls.tsx
web/src/ws/: .gitkeep  client.ts
