[package]
name = "api-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "api_server"
path = "src/lib.rs"

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
sim-core = { path = "../sim-core" }
agent-core = { path = "../agent-core" }
llm-gateway = { path = "../llm-gateway" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
