[package]
name = "llm-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
toml = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
